@@ -1,4 +1,14 @@
 #!/usr/bin/perl
+#
+# tl-paper
+#
+# query and change paper settings using TLPaper
+# this is independent from tlmgr
+#
+# Copyright 2011 Norbert Preining
+# This file is licensed under the GNU General Public License version 3
+# or any later version.
+#
 
 BEGIN {
   $^W = 1;
@@ -67,27 +77,12 @@ sub main {
       TeXLive::TLPaper::do_paper($prg,$texmfsysconfig,$newpaper);
     }
   
-    #
     # we probably have changed the paper, so run the execute actions
     # as announced by TLPaper, that is $::files_changed and 
     # $::regenerate_all_formats.
     #
-    # I would *LIKE* to call the shell code generated by
-    # dh_installtex, i.e., the postinst-tex shell code
-    # here ... why is that not possible???
-    if ($::files_changed) {
-      `mktexlsr /var/lib/texmf`;
-      #
-      # the following is propably a better approach ;-)
-      #if (system("kpsewhich --version >/dev/null 2>&1") == 0) {
-      #  if (system("which mktexlsr >/dev/null") == 0) {
-      #    
-      #  }
-      #}
-    }
-    if ($::regenerate_all_formats) {
-      `fmtutil-sys --refresh`;
-    }
+    # but we do not do this here, but rely on the libpaper shell
+    # script to do the rest
 
   } elsif ($action =~ m/^get$/i) { # "tl-paper get prg" gets paper setting for prg
     my $prg = shift @ARGV;
