@@ -4,8 +4,9 @@ texlive-base (2011.20120314-2) experimental; urgency=low
   * include tl-paper.pl and reworked libpaper handling (fk)
   * replace otf/ttf fonts with links to the files in the
     respective Debian package, depend on that package
+  * add code to recreate formats after libpaper changes
 
- -- Norbert Preining <preining@debian.org>  Mon, 19 Mar 2012 22:30:40 +0900
+ -- Norbert Preining <preining@debian.org>  Wed, 21 Mar 2012 11:36:14 +0900
 
 texlive-base (2011.20120314-1) experimental; urgency=low
 
